# gpsea-cs

./: .flake8  .gitignore  README.md  pyproject.toml
notebooks/ABCB7/: ABCB7_gpsea.ipynb
notebooks/ACADM/: ACADM_create_dataset.ipynb  ACADM_gpsea.ipynb
notebooks/ACBD6/: ACBD6.ipynb  ACBD6_gpc.ipynb  acbd6_new.ipynb
notebooks/AIRE/: AIRE-gpsea.ipynb
notebooks/ANKRD11/: ANKRD11_gpsea.ipynb  phenotype_scorer.py
notebooks/ASPM/: ASPM_gpsea.ipynb
notebooks/ATP13A2/: ATP13A2_gpsea.ipynb
notebooks/ATP6V0C/: ATP6V0C_gpsea.ipynb
notebooks/BRD4/: BRD4_gpsea.ipynb
notebooks/CHD8/: CHD8_gpc.ipynb  CHD8_gpsea.ipynb
notebooks/CLDN16/: CLDN16_gpsea.ipynb  Q9Y5I7.json
notebooks/CNTNAP2/: CNTNAP2_gpc.ipynb
notebooks/COL3A1/: COL3A1_gpsea.ipynb
notebooks/COQ4/: COQ4_gpsea.ipynb
notebooks/CTCF/: CTCF_gpsea.ipynb  P49711.json
notebooks/CYP21A2/: CYP21A2_gpsea.ipynb
notebooks/EHMT1/: EHMT1-gspea.ipynb
notebooks/EZH1/: EZH1_gpsea.ipynb
notebooks/FBN1/: FBN1_gpc.ipynb
notebooks/FBXL4/: FBXL4_gpsea.ipynb
notebooks/FBXO11/: FBXO11_gpsea.ipynb
notebooks/FGD1/: FGD1_gpsea.ipynb
notebooks/FZD5/: FZD5_gpsea.ipynb
notebooks/GLI3/: GLI3_gpsea.ipynb
notebooks/HMGCS2/: HMGCS2_gpsea.ipynb
notebooks/IKZF1/: IKZF1_gpsea.ipynb
notebooks/ITPR1/: ITPR1_gpsea.ipynb
notebooks/KCNH5/: KCNH5_gpsea.ipynb
notebooks/KDM6A/: KDM6A_gpsea.ipynb  O15550.json
notebooks/KDM6B/: KDM6B-gpsea.ipynb
notebooks/KMT2D/: KMT2D_frameshift_vs_missense.csv  KMT2D_gpsea.ipynb  (+1 more)
supplement/: GenerateTables.ipynb  Makefile  Supplemental Table S10.ods  Supplemental Tables.ods  Table S2.xlsx  cohort_dashboard.txt  cohort_dashbord.txt  cohort_results.csv  disease_comparison.csv  fisher_exact_test_dashboard.txt  gpsea-ajhg.bbx  measurement_dashboard.txt  measurement_dashbord.txt  mf_analysis.csv  references.bib  sig_fisher_exact_test_dashboard.txt  supplement.tex  supplement_tables.tex
(+283 files in other folders)
