[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpsea-cs"
authors = [
    {name = "Lauren Rekerle", email="lauren.rekerle@jax.org"},
    {name = "Daniel Danis", email="daniel.danis@bih-charite.de"},
    {name = "Peter Robinson", email="peter.robinson@bih-charite.de"},
     ]
description = "Explore genotype-phenotype correlations in GA4GH phenopacket cohorts"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Genotype-phenotype correlation",
    "Global Alliance for Genomics and Health",
    "GA4GH Phenopacket Schema",
    "Human Phenotype Ontology",
    "GA4GH",
    "HPO",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "hpo-toolkit>=0.3.0",
    "gpsea>=0.9.1",
    "phenopacket-store-toolkit>=0.1.2",
    "matplotlib>=3.2.0,<4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov",
]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/monarch-initiative/gpsea-cs"
repository = "https://github.com/monarch-initiative/gpsea-cs.git"
documentation = "https://monarch-initiative.github.io/gpsea-cs/stable"
bugtracker = "https://github.com/monarch-initiative/gpsea-cs/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "gpseacs.__version__" }
